[package]
name = "http_endless_header"
version = "0.1.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "http_endless_header for overflowing http server with an infinite header"
license-file = "../LICENSE"
repository = "https://github.com/mettke/sec_tool_belt"
readme = "../README.md"
keywords = ["stb", "heh"]
categories = ["command-line-utilities"]

[dependencies]
common = { path = "../common" }
